Fix alignment and merge scripts

--- a/assets/main.css
+++ b/assets/main.css
@@ -337,7 +337,7 @@ th {
 
 .divMain {
     margin: auto;
-    width: 60%;
+    width: 70%;
     padding: 10px;
     background-color: white;
 }
@@ -924,4 +924,17 @@ path {
 
 .annotation-note-title {
     font-weight: bold;
+}
+
+.pCustomRadius {
+    border-width: 0.20px;
+    color: rgb(102, 100, 100);
+    font-size: 15px;
+    opacity: 1;
+    font-size: 15px;
+    background-color: white;
+    width: 300x;
+    padding: 1px;
+    left: 1px;
+    top: 217px;
 }
